fix: press page z-index

--- a/styles/base.less
+++ b/styles/base.less
@@ -724,6 +724,9 @@ section, footer {
     &-cont {
       .flex-box(row, flex-start, stretch, 8px);
       flex-wrap: wrap;
+      position: relative;
+      z-index: 1;
+      
     }
     &-item-inner {
       height: 100%;
